feat: more infra support

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,14 @@ JWT_EXPIRY_HOURS=
 # Server Configuration
 SERVER_PORT=8080
 SERVER_ENV=development
+ENABLE_HTTP=true
+ENABLE_GRPC=true
 
 # Default Admin User
 DEFAULT_ADMIN_USERNAME=admin
 DEFAULT_ADMIN_EMAIL=admin@example.com
 DEFAULT_ADMIN_PASSWORD=admin123
+
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=
+GOOSE_MIGRATION_DIR=migrations
