--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,6 @@
 database:
+  driver: postgres # Can be postgres, mysql, sqlite3, or mariadb
+  # dsn: "" # Optional: A direct Data Source Name string. If provided, other database fields might be ignored.
   host: localhost
   port: 5432
   user: postgres
@@ -6,9 +8,20 @@ database:
   name: headcount_checker
   sslmode: disable
 
+# Example MySQL configuration:
+# database:
+#   driver: mysql
+#   host: localhost
+#   port: 3306
+#   user: root
+#   password: "password"
+#   name: headcount_checker
+#   dsn: "root:password@tcp(127.0.0.1:3306)/headcount_checker?parseTime=True"
+
 server:
-  http_port: "8080"
-  grpc_port: "8081"
+  port: "8080"
+  enable_http: true
+  enable_grpc: true
   env: development
 
 jwt:
