fix: implement unit of work pattern for database atomic

--- a/config.yaml
+++ b/config.yaml
@@ -1,34 +1,2 @@
-database:
-  driver: postgres # Can be postgres, mysql, sqlite3, or mariadb
-  # dsn: "" # Optional: A direct Data Source Name string. If provided, other database fields might be ignored.
-  host: localhost
-  port: 5432
-  user: postgres
-  password: "123456"
-  name: headcount_checker
-  sslmode: disable
-
-# Example MySQL configuration:
-# database:
-#   driver: mysql
-#   host: localhost
-#   port: 3306
-#   user: root
-#   password: "password"
-#   name: headcount_checker
-#   dsn: "root:password@tcp(127.0.0.1:3306)/headcount_checker?parseTime=True"
-
 server:
-  port: "8080"
-  enable_http: true
-  enable_grpc: true
-  env: development
-
-jwt:
-  secret: your-secret-key-change-this-in-production
-  expiry_hours: 72
-
-default_admin:
-  username: admin
-  email: admin@example.com
-  password: admin123
+  env: Local
