--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,46 @@ services:
       timeout: 10s
       retries: 3
 
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: go-backend-redis
+    restart: unless-stopped
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - go-backend-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  # Minio S3-compatible storage
+  minio:
+    image: minio/minio
+    container_name: go-backend-minio
+    restart: unless-stopped
+    ports:
+      - "${MINIO_API_PORT:-9000}:9000"
+      - "${MINIO_CONSOLE_PORT:-9001}:9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
+      MINIO_BROWSER_REDIRECT_URL: http://localhost:${MINIO_CONSOLE_PORT:-9001}
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - go-backend-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
   # Go Application
   app:
     build:
@@ -31,6 +71,8 @@ services:
     restart: unless-stopped
     ports:
       - "${SERVER_PORT:-8080}:8080"
+      - "${GRPC_PORT:-8090}:8090"
+      - "${GRAPHQL_PORT:-8081}:8081"
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -41,12 +83,30 @@ services:
       - JWT_SECRET=${JWT_SECRET:-your-secret-key-change-this-in-production}
       - JWT_EXPIRY_HOURS=${JWT_EXPIRY_HOURS:-72}
       - SERVER_PORT=8080
-      - SERVER_ENV=${SERVER_ENV:-production}
+      - SERVER_ENV=${SERVER_ENV:-development} # Changed to development for easier local testing
       - DEFAULT_ADMIN_USERNAME=${DEFAULT_ADMIN_USERNAME:-admin}
       - DEFAULT_ADMIN_EMAIL=${DEFAULT_ADMIN_EMAIL:-admin@example.com}
       - DEFAULT_ADMIN_PASSWORD=${DEFAULT_ADMIN_PASSWORD:-admin123}
+      # Redis Configuration
+      - CACHE_TYPE=${CACHE_TYPE:-redis}
+      - REDIS_ADDR=redis:6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      - REDIS_DB=${REDIS_DB:-0}
+      # Minio (S3-compatible) Configuration
+      - STORAGE_TYPE=${STORAGE_TYPE:-s3}
+      - S3_REGION=${S3_REGION:-us-east-1}
+      - S3_ACCESS_KEY_ID=${MINIO_ROOT_USER:-minioadmin}
+      - S3_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+      - S3_BUCKET=${S3_BUCKET:-mybucket}
+      - S3_ENDPOINT=${S3_ENDPOINT:-http://minio:9000}
+      - S3_DISABLE_SSL=${S3_DISABLE_SSL:-true}
+      - S3_FORCE_PATH_STYLE=${S3_FORCE_PATH_STYLE:-true}
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
         condition: service_healthy
     networks:
       - go-backend-network
@@ -58,6 +118,10 @@ services:
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+  minio_data:
     driver: local
 
 networks:
