--- a/.air.toml
+++ b/.air.toml
@@ -4,9 +4,9 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "tmp\\main.exe"
-  pre_cmd = ["swag init"]
-  cmd = "go build -o ./tmp/main.exe ."
+  bin = "./tmp/main"
+  pre_cmd = ["make swag"]
+  cmd = "go build -o ./tmp/main ./cmd"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs"]
   exclude_file = []
