--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Note: Rename this file to .env and update the values as needed.
+# use _ as separator for nested key names in yaml files.
+# example: storage.type in yaml becomes STORAGE_TYPE in .env
+# or storage.s3.secret_access_key becomes STORAGE_S3_SECRET_ACCESS_KEY
+
+# Server Configuration
+SERVER_PORT=8080
+GRPC_PORT=8090
+GRAPHQL_PORT=8081
+SERVER_ENV=development
+
 # Database Configuration
 DB_NAME=go_boilerplate
 DB_USER=postgres
@@ -10,12 +21,6 @@ DB_SSL_MODE=disable
 JWT_SECRET=your-secret-key-change-this-in-production
 JWT_EXPIRY_HOURS=72
 
-# Server Configuration
-SERVER_PORT=8080
-GRPC_PORT=8090
-GRAPHQL_PORT=8081
-SERVER_ENV=development
-
 # Default Admin User (for initial setup or testing)
 DEFAULT_ADMIN_USERNAME=admin
 DEFAULT_ADMIN_EMAIL=admin@example.com
@@ -23,7 +28,7 @@ DEFAULT_ADMIN_PASSWORD=admin123
 
 # Redis Configuration
 REDIS_PORT=6379
-REDIS_ADDR=localhost:6379 # For local connection outside docker-compose
+REDIS_ADDR=localhost:6379 
 REDIS_PASSWORD=
 REDIS_DB=0
 CACHE_TYPE=redis # Options: redis, ristretto
@@ -38,7 +43,7 @@ S3_REGION=us-east-1
 S3_ACCESS_KEY_ID=minioadmin
 S3_SECRET_ACCESS_KEY=minioadmin
 S3_BUCKET=mybucket
-S3_ENDPOINT=http://localhost:9000 # For local connection outside docker-compose
+S3_ENDPOINT=http://localhost:9000
 S3_DISABLE_SSL=true
 S3_FORCE_PATH_STYLE=true
 
