Remove deprecated database and cache configurations from example environment files

--- a/config.development.yaml
+++ b/config.development.yaml
@@ -22,7 +22,7 @@ database:
 
 mongo:
   enable: false # Set to true to enable MongoDB
-  uri: mongodb://localhost:27017
+  uri: mongodb://127.0.0.1:27017
   database: example_db
   username: ""
   password: ""
